# tailoredResume

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AJAS_Roadmap.html  CLAUDE.md  Dockerfile  Dockerfile.backend  README.md  agent.py  docker-compose.yml  main.py  package-lock.json  prototype.py  pyproject.toml  requirements.txt  streamlit_app.py  test_genai_direct.py  test_llm_fix.py  test_search.py
.github/workflows/: ci.yml
.streamlit/: secrets.toml
app/: agent.py  api.py  browser.py  celery_app.py  config.py  db.py  enrich.py  filters.py  init.py  jobs.py  llm.py  resilience.py  schemas.py  sessions.py  tailor.py  tasks.py  utils.py
app/strategies/: __init__.py  base.py  generic.py  greenhouse.py  lever.py  linkedin.py  qa.py
config/: sites.yaml
data/: ajas.db  job.txt  jobs_cache.json  llm_cache.json  master.yaml  sources.yaml  temp_job.txt
data/chroma_db/: chroma.sqlite3
data/outputs/: tailored_cl_temp_job.md  tailored_cv_job.md
job_agent/: main.py
job_agent/app/: agent.py  config.py  filters.py  jobs.py  llm.py  logger.py  utils.py
job_agent/data/: jobs_cache.json
prompts/: cover_letter.md.j2  cv_template.md.j2
scripts/: test_sources.py
src/ajas/: app.py  cli.py  config.py  database.py  filler.py  generator.py  llm.py  logger.py  models.py  parser.py  query_builder.py  sanitizer.py  (+8 more)
tests/: _test_fix.py  test_filters.py  test_foundation.py  test_jobs.py  test_llm.py  test_phase1.py  test_phase2.py  test_pipeline_smoke.py  test_redaction.py
web/: .dockerignore  Dockerfile.frontend  package-lock.json  package.json
(+13 files in other folders)
